--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "pet-hotel-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "localhost:8080",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
