--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pet-hotel-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://0.0.0.0:8000",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
